--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Static Interactive Resume</title>
+    <title style="color: black ;">Static Interactive Resume</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
                 <p style="text-align: justify; hyphens: auto;">As an aspiring web developer with a strong foundation in HTML, CSS, and JavaScript, I am seeking an entry-level position to apply my skills and learn new technologies. I aim to contribute to building user-friendly and responsive websites while expanding my knowledge in web development frameworks and best practices. My goal is to work in a collaborative environment where I can grow as a professional and contribute to delivering innovative web solutions.</p>
                 </section>
                 <section id="certification">
-                    <h3 style="color: white;">Carreer Objective</h3>
+                    <h3 style="color: white;">Certification</h3>
                     <p><b>Artificial Intelligence, Web 3.0 & Metaverse: </b>  From Governor House Karachi (Ongoing)</p>
                 </section>
         </div>
